# ndk_study

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-test.cpp
app/src/main/dlib/: setup.py
app/src/main/dlib/dlib/: CMakeLists.txt  revision.h
app/src/main/dlib/dlib/matrix/: matrix_la.h
app/src/main/dlib/dlib/test/: matrix.cpp
app/src/main/dlib/docs/: algorithms.html  api.html  bayes.html  books.html  change_log.html  compile.html  compression.html  containers.html  dnn_mmod_train_find_cars_ex.cpp.html  face_alignment.py.html  face_clustering.py.html  face_jitter.py.html  faq.html  global_optimization.py.html  graph_tools.html  howto_contribute.html  imaging.html  index.html  intro.html  kernel_1a.html  kernel_1b.html  kernel_1c.html  kernel_1da.html  kernel_1db.html  kernel_1ea.html  kernel_1eb.html  kernel_1ec.html  kernel_2a.html  kernel_3a.html  kernel_3b.html  license.html  linear_algebra.html  metaprogramming.html  ml.html  network.html  old_change_log.html  old_release_notes.html  optimization.html  other.html  parsing.html  (+4 more)
app/src/main/dlib/docs/dlib/: CMakeLists.txt.html  revision.h.html
app/src/main/dlib/docs/examples/: CMakeLists.txt.html
app/src/main/dlib/docs/python/: genindex.html
app/src/main/dlib/examples/: CMakeLists.txt  dnn_mmod_train_find_cars_ex.cpp
app/src/main/dlib/python_examples/: face_alignment.py  face_clustering.py  face_jitter.py  global_optimization.py  svm_binary_classifier.py  train_object_detector.py
app/src/main/res/values/: strings.xml
(+14 files in other folders)
